--- a/resume/index.html
+++ b/resume/index.html
@@ -186,36 +186,35 @@
             <div class="title">Sales Engineer - Support</div>
             <ul style="list-style-type: disc">
               <li>
-                Performed routine tasks like shipping tooling for purchases and
-                sales and inspections.
+                Provided technical support with regularly addressed sales and
+                technical inquiries, offering expertise in tool setup,
+                troubleshooting, and product quality assurance.
               </li>
               <li>
-                Part took in inspecting equipment for repair and defects in
-                manufacturing.
+                Managed routine tasks such as shipping, stock monitoring, and
+                vendor coordination, ensuring smooth logistics for purchases,
+                sales, and inspections.
               </li>
               <li>
-                Participated in selling marketing campaigns prior and post trade
-                shows.
+                Played a role in pre- and post-trade show activities,
+                contributing to marketing campaigns, preparing promotional
+                materials, and expanding the company's outreach.
               </li>
               <li>
-                Supplied updates for catalogs and websites including technical
-                aspects which help reduce troubleshooting time and onboarding
-                for customers.
+                Used OCR and PDF tools to create a digital library for catalogs,
+                instructions, and troubleshooting routines, enhancing
+                accessibility, and reducing troubleshooting time for customers.
               </li>
               <li>
-                Updated the company file system and sales system to modern
-                standards which improved up time to 100% as well as company
-                communication. RSVP was enabled to work completely remote by the
-                individual solely.
+                Upgrade of the company's file system and sales system to Windows
+                11 and cloud-based file storage, achieving 100% uptime and
+                improved communication.
               </li>
               <li>
-                Created portable documents for advertising, training and general
-                information for all aspects of RSVP Tooling’s general
-                commission.
-              </li>
-              <li>
-                Responded to general sales and technical questions regularly for
-                all tooling and more that is displayed at rsvptooling.com.
+                Developed applications in Java and Front-End web languages for
+                reviewing offers, tracking price lists, and validating stock.
+                Created tools to read CSVs, PDFs, and XML files, streamlining
+                inventory management and communication.
               </li>
             </ul>
           </ul>
