--- a/resume/index.html
+++ b/resume/index.html
@@ -27,14 +27,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="./../style.css" />
-    <title>Resume - Scott Palmer</title>
-    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="./../style.css" />
+    <title>Resume - Scott Palmer</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -89,12 +89,50 @@
                 >Resume</a
               >
             </li>
+
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://github.com/palmer81/palmer81.github.io/blob/main/pdf/Resume-ScottPalmer.pdf">
+                Download Resume<svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-file-arrow-down"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M8 5a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5A.5.5 0 0 1 8 5" />
+                  <path
+                    d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1" />
+                </svg>
+              </a>
+            </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="#contact"
                 >Contact</a
               >
+            </li>
+            <li class="nav-item">
+              <a
+                title="Github Account"
+                class="nav-link"
+                href="https://github.com/palmer81">
+                <svg
+                  style="height: 20px; width: 20px"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-github"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg>
+                Github
+              </a>
             </li>
           </ul>
         </div>
@@ -115,7 +153,7 @@
           class="profile" />
       </a>
       <h1 id="name">Scott Palmer</h1>
-      <main>
+      <main class="container-md">
         <div style="margin: auto; max-width: 900px">
           <div style="text-align: right; font-size: x-large; font-weight: bold">
             Scott R Palmer
