Added links to my sites with logos

--- a/index.html
+++ b/index.html
@@ -82,12 +82,176 @@
                 >Resume</a
               >
             </li>
+
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://github.com/palmer81/palmer81.github.io/blob/main/pdf/Resume-ScottPalmer.pdf">
+                Download Resume<svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-file-arrow-down"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M8 5a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5A.5.5 0 0 1 8 5" />
+                  <path
+                    d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1" />
+                </svg>
+              </a>
+            </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="#contact"
                 >Contact</a
               >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                My Sites
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdown">
+                <li>
+                  <a
+                    href="http://97.130.116.142:3000/"
+                    target="_blank"
+                    class="dropdown-item"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/xampp-logo-ac950edf.svg"
+                      alt="XAMPP"
+                      style="height: 16px; width: 16px" />
+                    At Home Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://github.com/palmer81"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub Account Page
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://palmer81.github.io/palmer81/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub User Page
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://palmer81.github.io/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub Personal
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://darknight65.000webhostapp.com/"
+                    target="_blank"
+                    class="dropdown-item"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/000webhost-logo_sm.svg"
+                      alt="000webhost"
+                      style="height: 16px; width: 16px" />
+                    Blog
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://darknight65.hyperphp.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/hyperphp-logo-sm.png"
+                      alt="HyperPHP"
+                      style="height: 16px; width: 16px" />
+                    Tech Guppy Forum
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://darknight65.liveblog365.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/profrehost-sm.png"
+                      alt="Pro Free Host"
+                      style="height: 16px; width: 16px" />
+                    eCommerce Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://www.darknight65.byethost7.com/video/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/byet-host-logo-sm.png"
+                      alt="Byet-Host"
+                      style="height: 16px; width: 16px" />
+                    Video Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://www.darknight65.byethost7.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/byet-host-logo-sm.png"
+                      alt="Byet-Host"
+                      style="height: 16px; width: 16px" />
+                    Tech Guppy
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://scottpalmercom.wordpress.com"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./img/WordPress-logotype-wmark.webp"
+                      alt="Wordpress"
+                      style="height: 16px; width: 16px" />
+                    Word Press Blog
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -142,6 +306,7 @@
             <ul class="logos">
               <li>
                 <a
+                  title="XAMPP"
                   href="https://www.apachefriends.org/"
                   target="_blank"
                   rel="noopener noreferrer">
@@ -152,6 +317,7 @@
               </li>
               <li>
                 <a
+                  title="GitHub"
                   href="https://pages.github.com/?(null)"
                   target="_blank"
                   rel="noopener noreferrer">
@@ -162,6 +328,7 @@
               </li>
               <li>
                 <a
+                  title="000WebHost"
                   href="https://www.000webhost.com/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -172,6 +339,7 @@
               </li>
               <li>
                 <a
+                  title="HyperPHP"
                   href="http://hyperphp.com/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -182,6 +350,18 @@
               </li>
               <li>
                 <a
+                  title="ProFreeHose"
+                  href="https://profreehost.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="./img/profrehost.png"
+                    alt="Pro Free Host https://profreehost.com/"
+                /></a>
+              </li>
+              <li>
+                <a
+                  title="Byet Host"
                   href="https://byet.host/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -192,6 +372,7 @@
               </li>
               <li>
                 <a
+                  title="WordPress"
                   href="https://wordpress.com/"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -453,8 +634,8 @@
         class="postition-absolute bottom-0 end-0"
         style="
           position: fixed;
-          bottom: 10px !important;
-          right: 16px !important;
+          bottom: 20px !important;
+          right: 26px !important;
         ">
         <svg
           style="width: 50px; height: 50px"
