--- a/resume/index.html
+++ b/resume/index.html
@@ -115,24 +115,150 @@
                 >Contact</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item dropdown">
               <a
-                title="Github Account"
-                class="nav-link"
-                href="https://github.com/palmer81">
-                <svg
-                  style="height: 20px; width: 20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  class="bi bi-github"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-                </svg>
-                Github
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                My Sites
               </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdown">
+                <li>
+                  <a
+                    href="http://97.130.116.142:3000/"
+                    target="_blank"
+                    class="dropdown-item"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/xampp-logo-ac950edf.svg"
+                      alt="XAMPP"
+                      style="height: 16px; width: 16px" />
+                    At Home Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://github.com/palmer81"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./../img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub Account Page
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://palmer81.github.io/palmer81/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./../img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub User Page
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://palmer81.github.io/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      style="height: 16px; width: 16px"
+                      src="./../img/Octicons-mark-github.svg"
+                      alt="GitHub" />
+                    GitHub Personal
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://darknight65.000webhostapp.com/"
+                    target="_blank"
+                    class="dropdown-item"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/000webhost-logo_sm.svg"
+                      alt="000webhost"
+                      style="height: 16px; width: 16px" />
+                    Blog
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://darknight65.hyperphp.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/hyperphp-logo-sm.png"
+                      alt="HyperPHP"
+                      style="height: 16px; width: 16px" />
+                    Tech Guppy Forum
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://darknight65.liveblog365.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/profrehost-sm.png"
+                      alt="Pro Free Host"
+                      style="height: 16px; width: 16px" />
+                    eCommerce Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://www.darknight65.byethost7.com/video/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/byet-host-logo-sm.png"
+                      alt="Byet-Host"
+                      style="height: 16px; width: 16px" />
+                    Video Site
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="http://www.darknight65.byethost7.com/"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/byet-host-logo-sm.png"
+                      alt="Byet-Host"
+                      style="height: 16px; width: 16px" />
+                    Tech Guppy
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://scottpalmercom.wordpress.com"
+                    class="dropdown-item"
+                    target="_blank"
+                    rel="noopener noreferrer">
+                    <img
+                      src="./../img/WordPress-logotype-wmark.webp"
+                      alt="Wordpress"
+                      style="height: 16px; width: 16px" />
+                    Word Press Blog
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -638,8 +764,8 @@
         class="postition-absolute bottom-0 end-0"
         style="
           position: fixed;
-          bottom: 10px !important;
-          right: 16px !important;
+          bottom: 20px !important;
+          right: 26px !important;
         ">
         <svg
           style="width: 50px; height: 50px"
