Several updates to style

--- a/index.html
+++ b/index.html
@@ -383,67 +383,95 @@
               </li>
             </ul>
           </article>
-          <h1>Projects</h1>
+          <h1>Web Sites</h1>
           <ul>
             <li>
-              At Home Web Site:
               <a
                 href="http://97.130.116.142:3000/"
                 target="_blank"
                 rel="noopener noreferrer">
-                http://97.130.116.142:3000/
+                At Home Web Site: http://97.130.116.142:3000/
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/xampp-logo-ac950edf.svg"
+                alt="XAMPP powered" />
             </li>
             <li>
-              Personal page:
               <a
                 href="http://palmer81.github.io/palmer81/"
                 target="_blank"
                 rel="noopener noreferrer">
-                palmer81.github.io/palmer81
+                GitHub page: palmer81.github.io/palmer81
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/GitHub-Logo.png"
+                alt="GitHub powered" />
             </li>
             <li>
-              Project page:
               <a href="https://github.com/palmer81">
-                https://github.com/palmer81
+                GitHub page: https://github.com/palmer81
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/GitHub-Logo.png"
+                alt="GitHub powered" />
             </li>
             <li>
-              GitHub page:
               <a
                 href="https://palmer81.github.io/"
                 target="_blank"
                 rel="noopener noreferrer">
-                palmer81.github.io
+                GitHub page: palmer81.github.io
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/GitHub-Logo.png"
+                alt="GitHub powered" />
             </li>
             <li>
-              Blog for talk:
               <a
                 href="https://darknight65.000webhostapp.com/"
                 target="_blank"
                 rel="noopener noreferrer">
-                darknight65.000webhostapp.com
+                Blog: darknight65.000webhostapp.com
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/000webhost-logo.svg"
+                alt="000WebHost powered" />
             </li>
             <li>
-              Forum that's called TechGuppy:
               <a
                 href="http://darknight65.hyperphp.com/"
                 target="_blank"
                 rel="noopener noreferrer">
-                darknight65.hyperphp.com
+                Tech Guppy Forum: darknight65.hyperphp.com
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/hyperphp-logo.png"
+                alt="HyperPHP powered" />
             </li>
             <li>
-              RSVP Tooling eComerce:
               <a
                 href="http://darknight65.liveblog365.com/"
                 target="_blank"
                 rel="noopener noreferrer">
-                darknight65.liveblog365.com
+                eComerce: darknight65.liveblog365.com
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/profrehost.png"
+                alt="ProFreeHost powered" />
             </li>
             <li>
               Video Host:
@@ -453,6 +481,11 @@
                 rel="noopener noreferrer">
                 www.darknight65.byethost7.com/video
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/byet-host-logo.png"
+                alt="Byet-Host powered" />
             </li>
             <li>
               Static page in front of Video host:
@@ -462,15 +495,24 @@
                 rel="noopener noreferrer">
                 www.darknight65.byethost7.com
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/byet-host-logo.png"
+                alt="Byet-Host powered" />
             </li>
             <li>
-              Blog:
               <a
                 href="https://scottpalmercom.wordpress.com"
                 target="_blank"
                 rel="noopener noreferrer">
-                scottpalmercom.wordpress.com
+                Blog: scottpalmercom.wordpress.com
               </a>
+              <br />
+              <img
+                style="height: 20px"
+                src="./img/wordpress-logo.svg"
+                alt="Wordpress powered" />
             </li>
             <li>
               My
@@ -496,19 +538,23 @@
         </div>
         <div
           id="contact"
-          style="width: -webkit-fill-available"
+          style="width: -webkit-fill-available; padding-top: 120px"
           class="container-fuild d-flex align-self-center flex-column justify-content-around flex-wrap">
-          <h5>Contact Me</h5>
+          <h1 class="fw-bolder">Contact Me</h1>
           <div
             class="container-fuild d-flex flex-row justify-content-around flex-wrap">
-            <div class="d-flex flex-column flex-wrap">
-              <h6 style="margin-block-start: 0; margin-block-end: 0">Email</h6>
+            <div class="d-flex flex-column flex-wrap fw-bolder">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
+                Email
+              </h2>
               <a
                 href="mailto:palmer.sr@gmail.com"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Gmail-Logo.png"
+                  src="./../img/Gmail-Logo.png"
                   class="sideLogo"
                   alt="Gmail" />
               </a>
@@ -517,7 +563,7 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Outlook-Logo.png"
+                  src="./../img/Outlook-Logo.png"
                   class="sideLogo"
                   alt="Outlook" />
               </a>
@@ -526,7 +572,7 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Hotmail-Logo.png"
+                  src="./../img/Hotmail-Logo.png"
                   class="sideLogo"
                   alt="Hotmail" />
               </a>
@@ -535,35 +581,39 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Southern-Illinois-Salukis-Logo.png"
+                  src="./../img/Southern-Illinois-Salukis-Logo.png"
                   class="sideLogo"
                   alt="Saluki SIU Carbondale, IL" />
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Freelance
-              </h6>
+              </h2>
               <a
                 href="https://www.fiverr.com/scott_r_palmer?public_mode=true"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/fiverr-logo.png"
+                  src="./../img/fiverr-logo.png"
                   alt="Fiverr Profile"
                   class="sideLogo" />
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Chat
-              </h6>
+              </h2>
               <a
                 href="https://techguppy.slack.com/"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/slack-logo.png"
+                  src="./../img/slack-logo.png"
                   alt="Slack Profile"
                   class="sideLogo" />
               </a>
@@ -572,21 +622,23 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Discord-logo.png"
+                  src="./../img/Discord-logo.png"
                   alt="Discord Profile"
                   class="sideLogo" />
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Social Network
-              </h6>
+              </h2>
               <a
                 href="https://www.facebook.com/palmer.sr"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Linkedin-logo.png"
+                  src="./../img/Linkedin-logo.png"
                   alt="LinkedIn Profile"
                   class="sideLogo" />
               </a>
@@ -595,7 +647,7 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Facebook_logo_PNG9.png"
+                  src="./../img/Facebook_logo_PNG9.png"
                   alt="Facebook Profile"
                   class="sideLogo" />
               </a>
@@ -604,21 +656,23 @@
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/Twitter-Logo.png"
+                  src="./../img/Twitter-Logo.png"
                   alt="Twitter Profile"
                   class="sideLogo" />
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
-                Coding
-              </h6>
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
+                Coding/Project
+              </h2>
               <a
                 href="https://github.com/palmer81"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
-                  src="./img/GitHub-Logo.png"
+                  src="./../img/GitHub-Logo.png"
                   alt="Fiverr Profile"
                   class="sideLogo" />
               </a>
