--- a/resume/index.html
+++ b/resume/index.html
@@ -626,13 +626,17 @@
         </div>
         <div
           id="contact"
-          style="width: -webkit-fill-available"
+          style="width: -webkit-fill-available; padding-top: 120px"
           class="container-fuild d-flex align-self-center flex-column justify-content-around flex-wrap">
-          <h5>Contact Me</h5>
+          <h1 class="fw-bolder">Contact Me</h1>
           <div
             class="container-fuild d-flex flex-row justify-content-around flex-wrap">
-            <div class="d-flex flex-column flex-wrap">
-              <h6 style="margin-block-start: 0; margin-block-end: 0">Email</h6>
+            <div class="d-flex flex-column flex-wrap fw-bolder">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
+                Email
+              </h2>
               <a
                 href="mailto:palmer.sr@gmail.com"
                 target="_blank"
@@ -671,9 +675,11 @@
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Freelance
-              </h6>
+              </h2>
               <a
                 href="https://www.fiverr.com/scott_r_palmer?public_mode=true"
                 target="_blank"
@@ -685,9 +691,11 @@
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Chat
-              </h6>
+              </h2>
               <a
                 href="https://techguppy.slack.com/"
                 target="_blank"
@@ -708,9 +716,11 @@
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
                 Social Network
-              </h6>
+              </h2>
               <a
                 href="https://www.facebook.com/palmer.sr"
                 target="_blank"
@@ -740,9 +750,11 @@
               </a>
             </div>
             <div class="d-flex flex-column">
-              <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
-                Coding
-              </h6>
+              <h2
+                class="fw-bolder"
+                style="margin-block-start: 0.97em; margin-block-end: 0">
+                Coding/Project
+              </h2>
               <a
                 href="https://github.com/palmer81"
                 target="_blank"
